# cortex-local

./: .env.example  .gitignore  Dockerfile.mock-embed  LICENSE  README.md  docker-compose.yml
.kiro/specs/cortex-local/: design.md  requirements.md  tasks.md  tasks.meta.json
db/migrations/: 001_initial.sql
docs/: implementation-plan.md
ingestion/: Dockerfile
mcp-git/: Dockerfile
mcp-transcript/: Dockerfile
mcp-vector/: Dockerfile  pyproject.toml
mcp-vector/src/: embeddings.py  models.py  vector_store.py
mcp-vector/tests/: test_embeddings.py
scripts/: mock-embedding-server.py  test_embed_and_store.py
web-ui/: Dockerfile
